  to directories instead of raising EACCES. Introduce
  caml/winsupport.h to hold more common code between the runtime,
  lib-sys, and win32unix.
  (Antonin Décimo, review by David Allsopp and Xavier Leroy)

- #10737: add new ephemeron API for forward compatibility with Multicore
  OCaml.
  (Damien Doligez, review by Stephen Dolan)

* #10922: Add deprecation warnings on {Int32,Int64,Nativeint}.format.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Florian Angeletti)

### Other libraries:

- #10192: Add support for Unix domain sockets on Windows and use them
  to emulate Unix.socketpair (only available on Windows 1803+)
  (Antonin Décimo, review by David Allsopp)

- #10469: Add Thread.set_uncaught_exception_handler and
  Thread.default_uncaught_exception_handler.
  (Enguerrand Decorne, review by David Allsopp)

- #10697: Bindings of dup and dup2 in win32unix now correctly call
  WSADuplicateSocket on sockets instead of DuplicateHandle.
  (Antonin Décimo, review by Xavier Leroy and Nicolás Ojeda Bär)

- #10951: Introduce the Thread.Exit exception as an alternative way to
  terminate threads prematurely.  This alternative way will become
  the standard way in 5.00.
  (Xavier Leroy, review by Florian Angeletti)

### Tools:

- #9701: Release bytecode only after collecting backtrace information
  for exceptions, same for dynamic loaded code compiled from toplevel on
  ocamlnat.
  (Renato Alencar, reported by Krzysztof Leśniak, reviewed by Gabriel Scherer)

- #10839: Fix regression of #show when printing class type
  (Élie Brami, review by Florian Angeletti)

- #3959, #7202, #10476: ocaml, in script mode, directive errors
  (`#use "missing_file";;`) use stderr and exit with an error.
  (Florian Angeletti, review by Gabriel Scherer)

- #10438: add a new toplevel cli argument `-e <script>` to
  run script passed to the toplevel.
  (Pavlo Khrystenko, review by Gabriel Scherer)

- #10524: Directive argument type error now shows expected and received type.