@@ -265,6 +265,9 @@ OCaml 4.14.0
   OCaml.
   (Damien Doligez, review by Stephen Dolan)
 
+- #10786: The implementation of Complex.norm now uses Float.hypot.
+  (Christophe Troestler, review by David Allsopp and Xavier Leroy)
+
 * #10922: Add deprecation warnings on {Int32,Int64,Nativeint}.format.
   (Nicolás Ojeda Bär, review by Xavier Leroy and Florian Angeletti)
 
